adding operations endpoint
